# pyrope-ipywidgets

./: .gitignore  MANIFEST.in  install.json  package.json  pyproject.toml  pyrope_ipywidgets.json  requirements.txt  webpack.config.js
css/: widgets.css
pyrope_ipywidgets/: __init__.py  _frontend.py  _version.py  formatter.py  widgets.py
pyrope_ipywidgets/nbextension/: extension.js
src/: index.ts  plugin.ts  utils.ts  version.ts  widgets.ts
